[package]
name = "mp4muxer"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
chrono = { version = "0" }
clap = { version = "3", features = ["derive", "suggestions", "color", "cargo"] }
