[package]
name = "mp4muxer2"
authors = ["Aleksandr Sokolovskii <amsokol+github@gmail.com>"]
repository = "https://github.com/amsokol/mp4muxer2"
description = "MP4 muxer based on https://github.com/DolbyLaboratories/dlb_mp4base great library"
license = "MIT"
version = "2.2.5"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
clap = { version = "3", features = ["derive", "suggestions", "color", "cargo"] }

[[bin]]
name = "mp4muxer2"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true
